# golf-availability-bot

./: .env  .env.example  CLEANUP_PHASE2_SUMMARY.md  CLEANUP_SUMMARY.md  DAILY_EMAIL_FIX_SUMMARY.md  EMAIL_SYSTEM_UPDATE_SUMMARY.md  FINAL_TEST_RESULTS.md  FIND_DATABASE_CONNECTION.md  GOLF_MONITOR_USAGE.md  HOW_TO_CONNECT_DATABASE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_RUNNING_GUIDE.md  NOTIFICATION_SYSTEM_DEPLOYMENT.md  OFFLINE_CACHING_GUIDE.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENVIRONMENT_VARIABLES.md  RENDER_SETUP_GUIDE.md  STREAMLIT_DUPLICATE_BUTTON_FIX.md  TEST_RESULTS_SUMMARY.md  availability_cache.json  check_availability.py  config.py  config_simple.env  config_template.env  data_ingestion_service.py  facilities.py  golf_availability_monitor.py  golf_club_urls.py  golf_monitor.py  golf_utils.py  golfbox_session.json  implementation_summary.py  local_api_server.py  location_config_updater.py  location_finder.py  nearby_clubs_config.txt  notification_service.py  (+37 more)
debug_html/: availability-20250821-184342.html  availability-20250821-184345.html  availability-20250821-184348.html  availability-20250821-184916.html  availability-20250821-184926.html  availability-20250821-184935.html  availability-20250821-185234.html  availability-20250821-185247.html  availability-20250821-185257.html  availability-20250821-185542.html  grid-2025-08-15.html  grid-2025-08-16.html  grid-2025-08-20.html  grini-2025-08-21-0710.html  grini-2025-08-21-0730.html  grini-2025-08-21-1030.html  grini-test-20250822-114319.html
golfbot/: __init__.py  (+3 more)
(+61 files in other folders)
